force-app/main/default/objects/Account_Team_Role_Config__mdt/Account_Team_Role_Config__mdt.object-meta.xml
<CustomObject>
    <label>Account Team Role Config</label>
    <pluralLabel>Account Team Role Configs</pluralLabel>
</CustomObject>