force-app/main/default/objects/Account_Team_Role_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Uncheck to retire a role from the picker without deleting the record.</description>
</CustomField>