force-app/main/default/objects/Account_Team_Role_Config__mdt/fields/Badge_Background__c.field-meta.xml
<CustomField>
    <fullName>Badge_Background__c</fullName>
    <label>Badge Background</label>
    <type>Text</type>
    <length>20</length>
    <description>Hex colour for the role badge background, e.g. #E6F1FB.</description>
</CustomField>