force-app/main/default/objects/Account_Team_Role_Config__mdt/fields/Badge_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Badge_Text_Color__c</fullName>
    <label>Badge Text Colour</label>
    <type>Text</type>
    <length>20</length>
    <description>Hex colour for the role badge text, e.g. #0C447C.</description>
</CustomField>