force-app/main/default/objects/Account_Team_Role_Config__mdt/fields/Default_Account_Access__c.field-meta.xml
<CustomField>
    <fullName>Default_Account_Access__c</fullName>
    <label>Default Account Access</label>
    <type>Text</type>
    <length>10</length>
    <description>One of None, Read or Edit. Cannot be lower than the org-wide default for Account.</description>
</CustomField>