force-app/main/default/objects/Account_Team_Role_Config__mdt/fields/Mirror_To_Account_Field__c.field-meta.xml
<CustomField>
    <fullName>Mirror_To_Account_Field__c</fullName>
    <label>Mirror To Account Field</label>
    <type>Text</type>
    <length>80</length>
    <description>API name of an Account User-lookup field that should mirror the active holder of this role (e.g. ALM_CSM__c). Maintained by AccountTeamMemberTrigger so account-team composition is reportable. Leave blank for roles that should not be mirrored. Only meaningful for Single_Holder roles.</description>
</CustomField>