force-app/main/default/objects/Account_Team_Role_Config__mdt/fields/Single_Holder__c.field-meta.xml
<CustomField>
    <fullName>Single_Holder__c</fullName>
    <label>Single Holder</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>When checked, only one active member may hold this role per account. The controller blocks any change that would leave a second holder.</description>
</CustomField>