force-app/main/default/objects/Account_Team_Role_Config__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Controls the order roles appear in the picker.</description>
</CustomField>