force-app/main/default/objects/Account_Team_Role_Config__mdt/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <label>Team Role</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Must exactly match a value in the Account Team Member Role picklist (the TeamRole standard value set), e.g. "ALM CSM".</description>
</CustomField>